fix footer z-index issues and collaborator name wrapping

--- a/wonder/romeo/static/scss/specifics/video/_layout-control.scss
+++ b/wonder/romeo/static/scss/specifics/video/_layout-control.scss
@@ -6,7 +6,7 @@
   position: fixed;
   bottom: 0;
   left:   0;
-  z-index: 2;
+  z-index: 20;
   text-align: right;
   background: $swatch-one;
   background-clip: padding-box;
