--- a/wonder/romeo/static/scss/specifics/video/_video-collaborators.scss
+++ b/wonder/romeo/static/scss/specifics/video/_video-collaborators.scss
@@ -62,7 +62,6 @@
 }
 
 .video-collaborators__collaborator-name-container {
-  width: 150px;
   display: inline-block;
 }
 
