--- a/wonder/romeo/static/scss/specifics/video/_video-edit-collections.scss
+++ b/wonder/romeo/static/scss/specifics/video/_video-edit-collections.scss
@@ -3,7 +3,7 @@
 }
 
 .video-edit-collections__options {
-  max-width: 700px;
+  max-width: 704px;
   margin: 0 auto;
   left: 130px;
 }
